# educational-ray-tracer

./: .gitignore  LICENSE  README.md  color.py  pyproject.toml  ray-tracer.ipynb  requirements.txt  resolution.py  vec3.py  vector.py  vertex.py
docs/: docs.md  examples.md  raytracing.md
docs/api/: color.md  material.md  resolution.md  scene.md  world.md
docs/demos/: snells_law.ipynb
educational_notebooks/: 02_camera_render_loop.ipynb  1_data_representation.ipynb  1_data_visualizer.ipynb  2_camera_render_loop.ipynb  3_intersections_geometry.ipynb  4_material_shaders_lights.ipynb  5_integrator_recursion.ipynb  6_noise_procedural.ipynb  7_demo_scene.ipynb  helloworld.ipynb  introduction.md
notebooks/: 01_material.ipynb  02_world.ipynb  03_lights.ipynb  04_scene.ipynb  05_phong_tracer.ipynb  06_phong_tracer.ipynb  07_pbr_tracer.ipynb  animations.ipynb  benchmark.ipynb  custom_object.ipynb  custom_shader.ipynb  educational.ipynb  emmision.ipynb  hello.ipynb  helloworld.ipynb  ior.ipynb  legacy.ipynb  light_test.ipynb  notebook_1-ray_tracing_fundamentals.ipynb  objects.ipynb  perlin_noise.ipynb  ray-tracer.ipynb  reflectivity.ipynb  renderloop.ipynb  shaders.ipynb  shines.ipynb  slope_map.ipynb  transform.ipynb  transparency.ipynb
notebooks/animations/: animations.ipynb
notebooks/complex_scene_creation/: 0_complex_scene.md  1_material.ipynb  2_lights.ipynb  3_scene.ipynb  4_phong_tracer.ipynb
notebooks/custom_definitions/: 0_custom_definitions.md  custom_noise.ipynb  custom_object.ipynb  custom_renderloop.ipynb  custom_shader.ipynb
notebooks/prednaska/: demo1.ipynb
notebooks/prerendered_demo_scenes/: 0_readme.md  perlin_noise.ipynb  perlin_noise_normal.ipynb
notebooks/tests/: benchmark.ipynb  ior.ipynb  reflectivity.ipynb  shines.ipynb  transparency.ipynb
src/: __init__.py  color.py  internals.py
src/core/math/: vec3.py  vector.py  vertex.py
src/geometry/: __init__.py  geometry_hit.py  hit_point.py  hittable.py  object_geometry.py  primitive.py  ray.py  world.py
src/geometry/objects/: __init__.py  box.py  cylinder.py  plane.py  sphere.py  sqare.py  torus.py  triangle.py
src/geometry/primitives/: __init__.py  box.py  cylinder.py  plane.py  sphere.py  sqare.py  torus.py  triangle.py
src/io/: __init__.py  image_helper.py  object_libraries.py  pickle_manager.py  resolution.py  video.py
src/light/: light.py
src/material/: __init__.py  color.py  material.py
src/material/material/: __init__.py  material.py  pbr_material.py  phong_material.py  sample.py
src/material/textures/: __init__.py  bump_map.py  perlin_noise.py  slope_map.py
src/material/textures/material/: checker.py  marble.py  material.py  rock.py
src/material/textures/noise/: FBM.py  FBM_noise.py  __init__.py  noise.py  normal_base.py  perlin_noise.py  (+4 more)
src/math/: __init__.py  helpers.py  optics.py  vec3.py  vector.py  vertex.py
src/render/: __init__.py  helpers.py  multithread_render.py  render.py  render_config.py  resolution.py
src/render/integrator/: __init__.py  fresnel.py  integrator.py  ray_caster.py  recursive_integrator.py
src/render/loops/: __init__.py  linear_ray_caster.py  linear_render_loop.py  loop_model.py  multithread_render.py  progress.py  raytrace_loop.py  render_loop.py
src/render/post_process/: post_process_config.py  post_process_pipeline.py
src/scene/: __init__.py  camera.py  light.py  object.py  primitive.py  scene.py  skybox.py  surface_interaction.py  transform.py
src/scene/animation/: animator.py  ease.py
src/scene/camera/: camera.py  pinhole_camera.py
src/shading/: __init__.py  blinn_phong_shader.py  color_shader.py  curvature_shader.py  depth_shader.py  diff_shader.py  dot_product_shader.py  extended_blinn_phong_shader.py  fersnel.py  fresnel.py  helpers.py  lambert_shader.py  local_shading.py  model.py  normal_shader.py  shading_model.py
src/visualizer/: edu_helpers.py  visualizer.py
(+5 files in other folders)
